// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches snapshot for dropdown popover 1`] = `
<ul
  class="py-1 focus:outline-none"
  tabindex="-1"
>
  <li
    class=""
    role="menuitem"
  >
    <a
      class="flex w-full cursor-pointer items-center justify-start px-4 py-2 hover:bg-gray-100 focus:bg-gray-100 focus:outline-none dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:bg-gray-600 dark:focus:text-white text-base font-normal text-primary-200"
      href="/test/path/1"
      tabindex="-1"
      type="button"
    >
      Test Label 1
    </a>
  </li>
  <li
    class=""
    role="menuitem"
  >
    <a
      class="flex w-full cursor-pointer items-center justify-start px-4 py-2 hover:bg-gray-100 focus:bg-gray-100 focus:outline-none dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:bg-gray-600 dark:focus:text-white text-base font-normal text-primary-700"
      href="/test/path/2"
      tabindex="-1"
      type="button"
    >
      Test Label 2
    </a>
  </li>
  <li
    class=""
    role="menuitem"
  >
    <a
      class="flex w-full cursor-pointer items-center justify-start px-4 py-2 hover:bg-gray-100 focus:bg-gray-100 focus:outline-none dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:bg-gray-600 dark:focus:text-white text-base font-normal text-primary-200"
      href="/test/path/3"
      tabindex="-1"
      type="button"
    >
      Test Label 3
    </a>
  </li>
</ul>
`;

exports[`snapshot > matches snapshot for tab bar 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="relative flex h-10 min-w-max"
      >
        <div
          class="absolute size-full !border-2 border-transparent border-b-primary-200"
        />
        <div
          class="relative h-full flex"
        >
          <div
            class="h-full truncate"
            data-testid="tabs-tab-bar"
          >
            <ul
              class="list-none border border-gray-200 text-left text-sm font-medium text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white border-none rounded-none h-full flex bg-transparent"
            >
              <a
                href="/test/path/1"
                tabindex="-1"
              >
                <li
                  class="[&>*]:first:rounded-t-lg [&>*]:last:rounded-b-lg [&>*]:last:border-b-0 text-base font-normal contents"
                >
                  <button
                    class="focus:ring-cyan-700 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:text-white dark:focus:ring-gray-500 text-primary-200 flex w-full items-center border-b px-4 py-2 dark:border-gray-600 h-full bg-transparent hover:bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:text-primary-700"
                    type="button"
                  >
                    Test Label 1
                  </button>
                </li>
              </a>
              <a
                href="/test/path/2"
                tabindex="-1"
              >
                <li
                  class="[&>*]:first:rounded-t-lg [&>*]:last:rounded-b-lg [&>*]:last:border-b-0 text-base font-normal contents"
                >
                  <button
                    class="dark:bg-gray-800 text-primary-700 focus:!text-primary-700 !border-b-primary-700 flex w-full items-center border-b px-4 py-2 dark:border-gray-600 h-full bg-transparent hover:bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:text-primary-700"
                    type="button"
                  >
                    Test Label 2
                  </button>
                </li>
              </a>
              <a
                href="/test/path/3"
                tabindex="-1"
              >
                <li
                  class="[&>*]:first:rounded-t-lg [&>*]:last:rounded-b-lg [&>*]:last:border-b-0 text-base font-normal contents"
                >
                  <button
                    class="focus:ring-cyan-700 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:text-white dark:focus:ring-gray-500 text-primary-200 flex w-full items-center border-b px-4 py-2 dark:border-gray-600 h-full bg-transparent hover:bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:text-primary-700"
                    type="button"
                  >
                    Test Label 3
                  </button>
                </li>
              </a>
            </ul>
          </div>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="relative flex h-10 min-w-max"
    >
      <div
        class="absolute size-full !border-2 border-transparent border-b-primary-200"
      />
      <div
        class="relative h-full flex"
      >
        <div
          class="h-full truncate"
          data-testid="tabs-tab-bar"
        >
          <ul
            class="list-none border border-gray-200 text-left text-sm font-medium text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white border-none rounded-none h-full flex bg-transparent"
          >
            <a
              href="/test/path/1"
              tabindex="-1"
            >
              <li
                class="[&>*]:first:rounded-t-lg [&>*]:last:rounded-b-lg [&>*]:last:border-b-0 text-base font-normal contents"
              >
                <button
                  class="focus:ring-cyan-700 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:text-white dark:focus:ring-gray-500 text-primary-200 flex w-full items-center border-b px-4 py-2 dark:border-gray-600 h-full bg-transparent hover:bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:text-primary-700"
                  type="button"
                >
                  Test Label 1
                </button>
              </li>
            </a>
            <a
              href="/test/path/2"
              tabindex="-1"
            >
              <li
                class="[&>*]:first:rounded-t-lg [&>*]:last:rounded-b-lg [&>*]:last:border-b-0 text-base font-normal contents"
              >
                <button
                  class="dark:bg-gray-800 text-primary-700 focus:!text-primary-700 !border-b-primary-700 flex w-full items-center border-b px-4 py-2 dark:border-gray-600 h-full bg-transparent hover:bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:text-primary-700"
                  type="button"
                >
                  Test Label 2
                </button>
              </li>
            </a>
            <a
              href="/test/path/3"
              tabindex="-1"
            >
              <li
                class="[&>*]:first:rounded-t-lg [&>*]:last:rounded-b-lg [&>*]:last:border-b-0 text-base font-normal contents"
              >
                <button
                  class="focus:ring-cyan-700 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:text-white dark:focus:ring-gray-500 text-primary-200 flex w-full items-center border-b px-4 py-2 dark:border-gray-600 h-full bg-transparent hover:bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:text-primary-700"
                  type="button"
                >
                  Test Label 3
                </button>
              </li>
            </a>
          </ul>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot when dropdown closed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="relative flex h-10 min-w-max"
      >
        <div
          class="absolute size-full !border-2 border-transparent border-b-primary-200"
        />
        <div
          class="relative h-full flex"
        >
          <div
            data-testid="tabs-dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              class="relative flex items-center justify-center rounded-lg text-center focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 w-fit h-full px-4 bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer text-base font-normal !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:bg-gray-100 text-primary-700 !border-b-primary-700 max-w-96"
              data-testid="flowbite-dropdown-target"
              id="_r_1_"
              type="button"
            >
              Test Label 2
              <svg
                class="ml-2 h-4 w-4"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.293 7.293a1 1 0 0 1 1.414 0L10 10.586l3.293-3.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 0-1.414z"
                  fill-rule="evenodd"
                  stroke="none"
                />
              </svg>
            </button>
          </div>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="relative flex h-10 min-w-max"
    >
      <div
        class="absolute size-full !border-2 border-transparent border-b-primary-200"
      />
      <div
        class="relative h-full flex"
      >
        <div
          data-testid="tabs-dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="relative flex items-center justify-center rounded-lg text-center focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 w-fit h-full px-4 bg-transparent !rounded-b-none !rounded-t-lg cursor-pointer text-base font-normal !border-2 border-transparent focus:outline-hidden focus:ring-0 focus:border-primary-300 focus:text-primary-300 hover:bg-gray-100 text-primary-700 !border-b-primary-700 max-w-96"
            data-testid="flowbite-dropdown-target"
            id="_r_1_"
            type="button"
          >
            Test Label 2
            <svg
              class="ml-2 h-4 w-4"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.293 7.293a1 1 0 0 1 1.414 0L10 10.586l3.293-3.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 0-1.414z"
                fill-rule="evenodd"
                stroke="none"
              />
            </svg>
          </button>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
